[package]
name = "mocword"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["high-moctane <high.moctane@gmail.com>"]
description = "Predict next words."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
itertools = "0.10"
regex = "1.5"
rusqlite = { version = "0.26", features = ["bundled"] }
